# Serial-Studio

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  ACKNOWLEDGEMENTS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.autosave  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  DISCOVER.md  FAQ.md  HACKING.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  LICENSE_COMMERCIAL.md  LICENSE_GPL3.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  README_DE.md  README_ES.md  README_FR.md  README_ZH.md  SPONSORS.md  Serial-Studio.pro  TESTING_PLAN.md  USE-CASES.md  VALUE-FOR-LICENSE.md  crowdin.yml  flake.nix  pytest.ini  sanitize-commit.sh  updates.json  vcpkg.json
app/: CMakeLists.txt  README.md
app/deploy/linux/: io.github.serial_studio.Serial_Studio.metainfo.xml  serial-studio-gpl3.desktop  serial-studio-pro.desktop  serial-studio-ssproj.xml  serial-studio.desktop  serial-studio.metainfo.xml
app/deploy/macOS/: AppIcon.icns  Assets.car  Serial-Studio.entitlements  icon.icns  info-gpl3.plist  info-pro.plist  info.plist
app/deploy/windows/: license.rtf  serial-studio.manifest
app/qml/: DialogLoader.qml  main.qml  qml.qrc
app/qml/AI/: AssistantPanel.qml  ChatSidebar.qml  (+3 more)
app/rcc/: chat-viewer.html  markdown-viewer.html  rcc.qrc
app/src/: AppInfo.h  AppState.cpp  AppState.h  Concepts.h  DSP.h  SerialStudio.cpp  SerialStudio.h  WidgetsCommon.cpp  WidgetsCommon.h  main.cpp
app/translations/: README.md  de.qm  en.qm  es.qm  es.ts  gpt_translate.py  llm_translate.py  ru.qm  ru.ts  translate_welcome_messages.py  translation_manager.py  translations.qrc  zh.ts
lib/: CMakeLists.txt
lib/KissFFT/: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  kfc.c  kfc.h  kiss_fft_log.h  kiss_fftnd.c  kiss_fftnd.h  kiss_fftndr.c  kiss_fftndr.h  kissfft-config.cmake.in  kissfft.hh  kissfft.pc.in  kissfft_i32.hh
lib/LiquidDSP/: .codecov.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  bootstrap.sh  configure.ac  library.json  makefile.in
lib/OpenSSL/: CMakeLists.txt  OpenSSL.pri  README.md
lib/QCodeEditor/: CMakeLists.txt  LICENSE.MIT  README.md
lib/QRealFourier/: CMakeLists.txt
lib/QSimpleUpdater/: CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  QSimpleUpdater.pri  QSimpleUpdater.pro  QSimpleUpdaterConfig.cmake.in  README.md  sanitize-commit.sh
lib/QSourceHighlite/: CMakeLists.txt  LICENSE  README.md  languagedata.cpp  languagedata.h  qsourcehighliter.cpp  qsourcehighliterthemes.cpp  qsourcehighliterthemes.h
lib/QuaZip/: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING  Doxyfile  NEWS.txt  QuaZip-1.x-migration.md  README.md  SECURITY.md  conanfile.py  vcpkg.json
lib/edbee-lib/: CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  edbee-lib.pri  edbee-lib.pro
lib/hidapi/: CMakeLists.txt
lib/lua/: CMakeLists.txt
lib/mdflib/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE-3RD-PARTY.md  README.md  mdflib.cppcheck  mdflib.sln  vcpkg.json
lib/qmqtt/: .qmake.conf  .tag  .travis.yml  CMakeLists.txt  LICENSE  README.md  edl-v10  epl-v10  qmqtt-API.md  qmqtt.pri  qmqtt.qbs  sync.profile
lib/qtcsv/: CMakeLists.txt  README.md  appveyor.yml  qtcsv.pro
lib/qwt/: CHANGES-6.2  CMakeLists.txt
lib/simde/: CMakeLists.txt
libs/CuteLogger/: .gitignore  .travis.yml  CMakeLists.txt  CuteLogger.pro  CuteLogger.qbs  README.md
libs/KDMacTouchBar/: .gitignore  .krazy  CMakeLists.txt  LICENSE.LGPL.txt  README.md  kdmactouchbar.pro
libs/qtcsv/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  qtcsv.pri  qtcsv.pro
tests/: .gitignore  CMakeLists.txt  README.md  conftest.py  pytest.ini  requirements.txt  test_manual_send.py  verify_frame_format.py
tests/CSV/: test_export.cpp
tests/DSP/: test_dsp.cpp
tests/IO/: test_checksum.cpp  test_checksum_fuzz.cpp  test_circular_buffer.cpp  test_console.cpp  test_fixed_queue.cpp  test_frame_reader.cpp
tests/JSON/: test_frame.cpp  test_frame_builder.cpp  test_frame_deserialization.cpp  test_frame_serialization.cpp  test_frame_utilities.cpp  test_project_model.cpp
tests/Licensing/: test_machine_id.cpp  test_simple_crypt.cpp
tests/Misc/: test_theme_manager.cpp  test_translator.cpp  test_utilities.cpp
tests/fixtures/: checksum_vectors.json  sample_frames.json  test_project.json
tests/integration/: __init__.py  conftest.py  test_2d_array_parsing.py  test_api_drivers.py  test_app_state.py  test_audio_loopback.py  test_batch_api.py  test_bug_audit_2026_03.py  test_change_driven_transforms.py  test_console_ansi_vt100.py  test_console_configuration.py  test_console_only_mode.py  test_csv_export.py  test_csv_parsing_verified.py  test_csv_player.py  test_dashboard_configuration.py  test_data_tables.py  test_dataset_transforms.py  test_demo.py  test_driver_api_comprehensive.py  test_dual_serial.py  test_frame_parsing.py  test_fuzzy.py  test_group_enable_disable.py  test_image_view.py  test_js_watchdog.py  test_latest_frame_api.py  test_licensing.py  test_licensing_tiers.py  test_lua_script_engine.py  test_mcp.py  test_mqtt_publisher_broker.py  test_mqtt_scripting.py  test_multi_source.py  test_new_driver_api.py  test_offline_activation.py  test_output_widgets.py  test_performance_concepts.py  test_project_configuration.py  test_project_editor.py  (+10 more)
tests/performance/: benchmark_frame_rate.py
tests/scripts/: conftest.py  test_ai_assistant_static.py  test_change_tracking.py  test_cpp_regressions.py  test_csv2wav.py  test_frame_parsers.py  test_table_handles.py
tests/security/: PYTEST_GUIDE.md  README.md  __init__.py  conftest.py  run_all_security_tests.sh  test_access_control.py  test_api_command_fuzzing.py  test_api_security.py  test_api_vulnerabilities.py  test_denial_of_service.py  test_exploit_techniques.py  test_protocol_fuzzing.py  test_zero_day_adversarial.py  weaponized_exploits.py
tests/utils/: __init__.py  api_client.py  audio_tools.py  data_generator.py  device_simulator.py  validators.py  virtual_serial.py
(+5782 files in other folders)
